# mcp-auth-test-server

./: .gitignore  AGENTS.md  HANDOFF-10.md  HANDOFF-2.md  HANDOFF-3.md  HANDOFF-4.md  HANDOFF-5.md  HANDOFF-6.md  HANDOFF-7.md  HANDOFF-8.md  HANDOFF-9.md  Makefile  README.md  pyproject.toml
docs/: architecture.md  auth-schemes.md  cli.md  deployment.md  testing.md
docs/site/: README.md  jsconfig.json  package-lock.json  package.json
scripts/: iterate.sh  test_all_schemes.sh
src/: __init__.py
src/mcp_auth_cli/: __init__.py  __main__.py  errors.py  models.py
src/mcp_auth_cli/auth/: __init__.py  auth_code.py  bearer.py  client_credentials.py  device_code.py  discovery.py  strategies.py  token_manager.py
src/mcp_auth_cli/cli/: __init__.py  commands.py  ui.py
src/mcp_auth_cli/mcp/: __init__.py  client.py
src/mcp_auth_cli/profiles/: __init__.py  store.py
src/mcp_auth_test_server/: __init__.py  app.py  openapi_examples.py
src/mcp_auth_test_server/auth/: __init__.py  bearer.py  dynamic_registration.py  oauth.py  oauth_v1.py  oauth_v21.py  token_store.py
src/mcp_auth_test_server/discovery/: __init__.py  auth_server_metadata.py  protected_resource.py
src/mcp_auth_test_server/mcp/: __init__.py  base.py  bearer_token.py  device_flow.py  (+6 more)
tests/: __init__.py  conftest.py  flow_helpers.py  test_bearer_token.py  test_client.py  test_device_flow.py  test_discovery.py  test_dynamic_registration.py  test_e2e.py  test_mcp_auth_cli.py  test_no_auth.py  test_oauth_v1.py  test_oauth_v21.py  test_oauth_v2_2l.py  test_oauth_v2_3l.py  test_openapi_docs.py  test_smoke.py
(+4 files in other folders)
